@@ -39,9 +39,12 @@
 /*           2002-01-27 Build 19                                             */
 /*                                                                           */
 /*****************************************************************************/
-/* $Id: version.c,v 1.9 2005/08/06 13:37:39 alfred Exp $                     */
+/* $Id: version.c,v 1.10 2005/08/07 10:34:08 alfred Exp $                     */
 /***************************************************************************** 
  * $Log: version.c,v $
+ * Revision 1.10  2005/08/07 10:34:08  alfred
+ * - 1.42 Bld37
+ *
  * Revision 1.9  2005/08/06 13:37:39  alfred
  * - Build 0036
  *
@@ -107,8 +110,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-char *Version="1.42 Beta [Bld 36]";
-char *DebVersion = "1.42bld36-1";
+char *Version="1.42 Beta [Bld 37]";
+char *DebVersion = "1.42bld37-1";
 LongInt VerNo=0x142f;
 
 char *InfoMessCopyright="(C) 1992,2005 Alfred Arnold";
